--- a/src/components/SkeletonText/SkeletonText.module.scss
+++ b/src/components/SkeletonText/SkeletonText.module.scss
@@ -1,15 +1,17 @@
+@use 'src/styles/utility' as *;
+
 .skeleton {
-  background-image: linear-gradient(to right, var(--white), var(--gray-02), var(--gray-02));
-  padding: 1rem;
-  height: 2rem;
-  margin-bottom: 1.6rem;
-  width: 10rem;
+  background-image: linear-gradient(to right, var(--ifm-color-emphasis-0), var(--ifm-color-emphasis-100), var(--ifm-color-emphasis-200));
+  padding: rem(1);
+  height: rem(2);
+  margin-bottom: rem(1.6);
+  width: rem(10);
   position: relative;
 }
 
 .skeleton:before {
   content: " ";
-  background-image: linear-gradient(to right, var(--gray-02), var(--gray-02), var(--white));
+  background-image: linear-gradient(to right, var(--ifm-color-emphasis-200), var(--ifm-color-emphasis-100), var(--ifm-color-emphasis-0));
   width: 100%;
   height: 100%;
   display: inline-block;
