--- a/src/features/Auth/Login/Login.module.scss
+++ b/src/features/Auth/Login/Login.module.scss
@@ -1,17 +1,18 @@
+@use 'src/styles/utility' as *;
+
 .login {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: calc(100vh - 10.5rem);
 
   .loginImage {
-    margin: 9.5rem 0 1rem 1.6rem;
+    margin: rem(9.5) 0 rem(1) rem(1.6);
     background-image: url(/img/login.svg);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
-    width: 12.8rem;
-    height: 12.8rem;
+    width: rem(12.8);
+    height: rem(12.8);
   }
 }
