--- a/src/features/Endpoint/Endpoint.module.scss
+++ b/src/features/Endpoint/Endpoint.module.scss
@@ -59,7 +59,7 @@
             transform: translateY(rem(-2)) scale(0.75);
           }
           &:focus {
-            outline: none;
+            outline-color: none;
             & ~ label {
               color: var(--ifm-color-secondary-darkest);
               background-color: var(--white);
