--- a/src/features/dashboard/components/AppForm/app-form.module.scss
+++ b/src/features/dashboard/components/AppForm/app-form.module.scss
@@ -69,7 +69,7 @@ fieldset .customTextInput:last-child {
     width: 100%;
 
     select {
-      padding: 0 30px 0 10px;
+      padding: 0 rem(3) 0 rem(1);
       border: 1px solid #e0e0e0;
       border-radius: 3px;
       line-height: 36px;
