chore: form styling

--- a/src/features/dashboard/components/Tabs/tabs.module.scss
+++ b/src/features/dashboard/components/Tabs/tabs.module.scss
@@ -34,7 +34,7 @@
 
 .tab_content {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   padding: rem(2);
 }
