--- a/src/features/dashboard/components/AppForm/app-form.module.scss
+++ b/src/features/dashboard/components/AppForm/app-form.module.scss
@@ -64,11 +64,12 @@ fieldset .customTextInput:last-child {
   .formContent {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     justify-content: center;
     width: 100%;
 
     select {
+      width: 100%;
       padding: 0 rem(3) 0 rem(1);
       border: 1px solid #e0e0e0;
       border-radius: 3px;
@@ -94,6 +95,9 @@ fieldset .customTextInput:last-child {
 }
 .submit_container {
   margin: rem(1) 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .scopeItem {
   border: 1.6px solid var(--ifm-color-emphasis-800);
