--- a/src/features/dashboard/components/AppForm/app-form.module.scss
+++ b/src/features/dashboard/components/AppForm/app-form.module.scss
@@ -37,6 +37,7 @@ fieldset .customTextInput:last-child {
     width: 100%;
     border: none;
     text-indent: rem(1.2);
+    font-size: rem(1.6);
     &:not(:placeholder-shown) ~ label {
       color: var(--colors-blue400);
       background-color: var(--ifm-color-emphasis-0);
@@ -44,7 +45,9 @@ fieldset .customTextInput:last-child {
       transform: translateY(rem(-2)) scale(0.75);
     }
     &:focus {
-      outline-color: none;
+      outline-color: unset;
+      outline: 1px solid var(--colors-blue500);
+      border-radius: 3px;
       & ~ label {
         color: var(--colors-blue400);
         background-color: var(--ifm-color-emphasis-0);
@@ -61,6 +64,7 @@ fieldset .customTextInput:last-child {
   justify-content: center;
   align-items: center;
   width: 100%;
+
   .formContent {
     display: flex;
     flex-direction: column;
@@ -68,16 +72,116 @@ fieldset .customTextInput:last-child {
     justify-content: center;
     width: 100%;
 
-    select {
-      width: 100%;
-      padding: 0 rem(3) 0 rem(1);
-      border: 1px solid #e0e0e0;
-      border-radius: 3px;
-      line-height: 36px;
-      height: rem(4);
-      background-color: var(--ifm-color-emphasis-0);
+    .customSelectField {
+      position: relative;
+
+      .customSelectDropdown {
+        position: absolute;
+        max-height: 200px;
+        overflow-y: auto;
+        top: 40px;
+        left: 0;
+        gap: rem(1);
+        width: 100%;
+        z-index: 10;
+        padding: rem(1);
+        background-color: var(--ifm-color-emphasis-0);
+        box-shadow: 0 rem(1) rem(1.5) rem(0.1) rgba(0,0,0,0.15);
+        -moz-box-shadow: 0 rem(1) rem(1.5) rem(0.1) rgba(0,0,0,0.15);
+        -webkit-box-shadow: 0 rem(1) rem(1.5) rem(0.1) rgba(0,0,0,0.15);
+
+        &.active {
+          display: inline-block;
+        }
+
+        &.inactive {
+          display: none;
+        }
+
+        .customSelectItem {
+          display: flex;
+          width: 100%;
+          align-items: center;
+          font-size: rem(1.4);
+          transition: background-color 0.2s;
+          border-radius: 3px;
+          padding: 10px;
+          
+          &:hover {
+            cursor: pointer;
+            background-color: var(--ifm-color-emphasis-100);
+          }
+          img {
+            width: rem(3.2);
+            height: rem(3.2);
+          }
+          .accountInfoContainer {
+            margin-left: rem(1);
+            line-height: rem(2);
+            .accountId {
+              color: var(--ifm-color-emphasis-600);
+            }
+          }
+        }
+      }
+    }
+    .selectWrapper {
+      position: relative;
       margin: rem(1) 0;
+      width: 100%;
+      height: rem(4);
+      line-height: 36px;
+      border-radius: 3px;
+      font-size: rem(1.6);
+      padding: 0 rem(3) 0 rem(1);
       color: var(--ifm-color-emphasis-1000);
+      border: 1px solid var(--colors-greyLight400);
+      background-color: var(--ifm-color-emphasis-0);
+
+      &:hover {
+        border-color: var(--ifm-color-emphasis-500);
+      }
+      &:focus {
+        outline: solid 1px var(--colors-blue500);
+        border-radius: 3px;
+      }
+      &:after {
+        content: "";
+        position: absolute;
+        display: inline-block;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        width: 40px;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-color: var(--ifm-color-emphasis-0);
+        background-image: url(/static/img/arrow_down.svg);
+        border-radius: 3px;
+        pointer-events: none;
+      }
+      .selectedAccount {
+        display: flex;
+        height: 100%;
+        align-items: center;
+        .accountInfoContainer {
+          margin-left: rem(1);
+          .accountType {
+            font-size: rem(1.6);
+          }
+          .accountId {
+            font-size: rem(1.2);
+            color: var(--ifm-color-emphasis-700);
+          }
+        }
+        div {
+          line-height: initial;
+        }
+        img {
+          width: rem(2.4);
+          height: rem(2.4);
+        }
+      }
     }
     .helperText {
       width: 100%;
