--- a/src/components/CustomSelectDropdown/custom_select_dropdown.module.scss
+++ b/src/components/CustomSelectDropdown/custom_select_dropdown.module.scss
@@ -10,7 +10,7 @@
         &.inactive {
             display: none;
         }
-        
+
         .dropdown {
             position: absolute;
             max-height: 200px;
@@ -46,6 +46,9 @@
         &:focus {
             outline: solid 1px var(--colors-blue500);
             border-radius: 3px;
+            .selectLabel {
+                color: var(--colors-blue500) !important;
+            }
         }
         &:after {
             content: "";
@@ -61,6 +64,26 @@
             background-image: url(/static/img/arrow_down.svg);
             border-radius: 3px;
             pointer-events: none;
+        }
+
+        .selectLabel {
+            color: var(--colors-greyLight600);
+            width: 100%;
+            height: 100%;
+            display: inline-block;
+            &.active {
+                color: var(--ifm-color-emphasis-1000);
+                position: absolute;
+                z-index: 1;
+                font-size: rem(1.2);
+                background-color: white;
+                bottom: rem(3.7);
+                left: rem(1);
+                padding: 0 rem(0.4);
+                line-height: rem(1);
+                height: auto;
+                width: auto;
+            }
         }
     }
 }
