--- a/src/features/dashboard/components/AppForm/app-form.module.scss
+++ b/src/features/dashboard/components/AppForm/app-form.module.scss
@@ -77,11 +77,17 @@ fieldset .customTextInput:last-child {
       color: var(--colors-greyLight600);
       margin-bottom: 0;
     }
-    .formHeaderContainer {
+    .apiTokenWrapper {
       display: flex;
-      padding: rem(1) 0;
-      margin-top: rem(1.5);
       flex-direction: column;
+      gap: rem(2);
+      margin-bottom: rem(2);
+      .formHeaderContainer {
+        display: flex;
+        padding: rem(1) 0;
+        margin-top: rem(1.5);
+        flex-direction: column;
+      }
     }
   }
 }
