--- a/src/features/dashboard/components/Tabs/tabs.module.scss
+++ b/src/features/dashboard/components/Tabs/tabs.module.scss
@@ -26,10 +26,24 @@
   font-size: rem(1.5);
   line-height: 1;
   user-select: none;
+  cursor: pointer;
+  border-bottom: 1px solid var(--ifm-color-emphasis-200);
+  &:hover h3 {
+    color: var(--ifm-color-emphasis-800);
+  }
+  h3 {
+    color: var(--ifm-color-emphasis-500);
+    font-weight: 400;
+    transition: color .2s;
+  }
 }
 
 .tabs_trigger[data-state='active'] {
-  box-shadow: inset 0 -1px 0 0 orangered, 0 1px 0 0 orangered;
+  border-bottom: 2px solid var(--colors-coral600);
+  h3 {
+    color: var(--ifm-color-emphasis-800);
+    font-weight: bold;
+  }
 }
 
 .tab_content {
