--- a/src/features/dashboard/components/Tabs/tabs.module.scss
+++ b/src/features/dashboard/components/Tabs/tabs.module.scss
@@ -19,7 +19,7 @@
 
 .tabs_trigger {
   padding: 0 rem(2);
-  height: 45px;
+  height: rem(4.5);
   display: flex;
   align-items: center;
   justify-content: center;
