--- a/src/features/Endpoint/Endpoint.module.scss
+++ b/src/features/Endpoint/Endpoint.module.scss
@@ -29,7 +29,7 @@
       align-items: center;
       display: flex;
       flex-direction: column;
-      line-height: 16px;
+      line-height: rem(1.6);
       width: 100%;
       box-sizing: border-box;
       padding: rem(1);
