--- a/src/features/dashboard/manage-apps/manage-apps.module.scss
+++ b/src/features/dashboard/manage-apps/manage-apps.module.scss
@@ -47,7 +47,7 @@
     z-index: 1;
     opacity: 0;
     transition: opacity 1s;
-    font-size: 10px;
+    font-size: rem(1);
     transform: translateX(50%);
     right: 50%;
     bottom: rem(2.4);
