chore: refactoring code

--- a/src/features/dashboard/components/ApiTokenForm/api-token.form.module.scss
+++ b/src/features/dashboard/components/ApiTokenForm/api-token.form.module.scss
@@ -1,5 +1,67 @@
 @use 'src/styles/utility' as *;
 
+.customTextInput {
+  align-items: center;
+  border: 1px solid var(--colors-greyLight400);
+  border-radius: 4px;
+  display: flex;
+  position: relative;
+  box-sizing: border-box;
+  margin: rem(1) 0;
+  &:focus-within {
+    border-color: var(--colors-blue400);
+  }
+  &:hover {
+    border: 1px solid var(--colors-greyLight600);
+  }
+  button {
+    top: 0;
+    bottom: 0;
+    right: 0;
+    position: absolute;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+  }
+  label {
+    position: absolute;
+    color: var(--colors-greyLight600);
+    left: rem(1.2);
+    pointer-events: none;
+    transform-origin: top left;
+    transition: all 0.25s ease;
+    white-space: nowrap;
+  }
+  input[type='text'],
+  input[type='number'] {
+    background: 0 0;
+    box-sizing: border-box;
+    color: var(--ifm-color-emphasis-1000);
+    height: rem(4);
+    min-width: 0;
+    width: 100%;
+    border: none;
+    text-indent: rem(1.2);
+    font-size: rem(1.6);
+    &:not(:placeholder-shown) ~ label {
+      color: var(--colors-blue400);
+      background-color: var(--ifm-color-emphasis-0);
+      padding: 0 rem(0.4);
+      transform: translateY(rem(-2)) scale(0.75);
+    }
+    &:focus {
+      outline-color: unset;
+      outline: 1px solid var(--colors-blue500);
+      border-radius: 3px;
+      & ~ label {
+        color: var(--colors-blue400);
+        background-color: var(--ifm-color-emphasis-0);
+        padding: 0 rem(0.4);
+        transform: translateY(rem(-2)) scale(0.75);
+      }
+    }
+  }
+}
+
 .card_wrapper {
   display: grid;
   grid-template-columns: 0.5fr 0.5fr;
