chore: implementing token manager design

--- a/src/features/dashboard/components/ApiTokenTable/cells.module.scss
+++ b/src/features/dashboard/components/ApiTokenTable/cells.module.scss
@@ -6,7 +6,55 @@
   justify-content: center;
   align-items: center;
   gap: rem(1);
+  .delete_button {
+    position: relative;
+    width: rem(1.5);
+    height: rem(1.5);
+    padding: rem(0.3);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-image: url(/img/delete.svg);
+    background-color: var(--colors-greyLight200);
+    border: 1px solid var(--colors-greyLight400);
+    border-radius: 100%;
+    cursor: pointer;
+    &:hover {
+      &::after {
+          content: 'Delete token';
+          text-align: center;
+          position: absolute;
+          display: inline-block;
+          border-radius: 4px;
+          padding: rem(1);
+          color: var(--ifm-color-emphasis-100);
+          background-color: var(--ifm-color-emphasis-700);
+          font-size: var(--fontSizes-3xs);
+          top: calc(-50% - 20px);
+          left: 50%;
+          min-width: 100px;
+          transform: translate(-50%, -50%);
+      }
+      &::before {
+          content: '';
+          position: absolute;
+          width: 0; 
+          height: 0; 
+          border-left: rem(0.7) solid transparent;
+          border-right: rem(0.7) solid transparent;
+          border-top: rem(0.7) solid var(--ifm-color-emphasis-700);
+          top: calc(-50% + 2px);
+          transform: translate(-50%, -50%);
+          left: 50%;
+      }
+    }
+  }
   & div {
     flex: 1;
+    &:nth-child(2) {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      overflow: visible;
+    }
   }
 }
