--- a/src/features/dashboard/components/AppForm/app-form.module.scss
+++ b/src/features/dashboard/components/AppForm/app-form.module.scss
@@ -131,8 +131,12 @@ fieldset .customTextInput:last-child {
   }
 }
 
-.customCheckboxContainer {
+.customCheckboxWrapper {
   display: flex;
   gap: rem(1);
   margin: rem(1) 0;
+  
+  label {
+    cursor: pointer;
+  }
 }
