--- a/src/components/ApiTokenNavbarItem/api_token_switcher.module.scss
+++ b/src/components/ApiTokenNavbarItem/api_token_switcher.module.scss
@@ -9,8 +9,8 @@ button {
   min-width: rem(22);
   background-color: var(--ifm-color-emphasis-100);
   border-radius: 6px;
-  padding: 5px;
-  box-shadow: 0px 10px 38px -10px rgba(22, 23, 24, 0.35), 0px 10px 20px -15px rgba(22, 23, 24, 0.2);
+  padding: rem(0.5);
+  box-shadow: 0 rem(1) rem(3.8) rem(-1) rgba(22, 23, 24, 0.35), 0 rem(1) rem(2) rem(-1.5) rgba(22, 23, 24, 0.2);
   animation-duration: 400ms;
   animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
   will-change: transform, opacity;
@@ -37,16 +37,16 @@ button {
 }
 
 .DropdownMenuItem {
-  font-size: 13px;
+  font-size: rem(1.3);
   line-height: 1;
   color: var(--violet11);
   border-radius: 3px;
   display: flex;
   align-items: center;
-  height: 25px;
-  padding: 0 5px;
+  height: rem(2.5);
+  padding: 0 rem(0.5);
   position: relative;
-  padding-left: 25px;
+  padding-left: rem(2.5);
   user-select: none;
   outline: none;
 }
@@ -58,7 +58,7 @@ button {
 @keyframes slideUpAndFade {
   from {
     opacity: 0;
-    transform: translateY(2px);
+    transform: translateY(rem(0.2));
   }
   to {
     opacity: 1;
@@ -69,7 +69,7 @@ button {
 @keyframes slideRightAndFade {
   from {
     opacity: 0;
-    transform: translateX(-2px);
+    transform: translateX(rem(-0.2));
   }
   to {
     opacity: 1;
@@ -80,7 +80,7 @@ button {
 @keyframes slideDownAndFade {
   from {
     opacity: 0;
-    transform: translateY(-2px);
+    transform: translateY(rem(-0.2));
   }
   to {
     opacity: 1;
@@ -91,7 +91,7 @@ button {
 @keyframes slideLeftAndFade {
   from {
     opacity: 0;
-    transform: translateX(2px);
+    transform: translateX(rem(2));
   }
   to {
     opacity: 1;
