--- a/src/features/dashboard/components/ApiTokenForm/api-token.form.module.scss
+++ b/src/features/dashboard/components/ApiTokenForm/api-token.form.module.scss
@@ -66,6 +66,5 @@
   display: grid;
   grid-template-columns: 0.5fr 0.5fr;
   grid-gap: rem(1.6);
-  padding-bottom: rem(2);
-  padding-right: rem(2);
+  margin-bottom: rem(2);
 }
