--- a/src/features/dashboard/components/AppsTable/cells.module.scss
+++ b/src/features/dashboard/components/AppsTable/cells.module.scss
@@ -32,30 +32,30 @@
 
   .tooltipText {
     visibility: hidden;
-    height: rem(1.5);
-    background-color: var(--ifm-color-emphasis-200);
-    color: var(--ifm-color-emphasis-1000);
+    color: var(--ifm-color-emphasis-100);
+    background-color: var(--ifm-color-emphasis-700);
     text-align: center;
     border-radius: 4px;
     position: absolute;
     z-index: 1;
     opacity: 0;
-    transition: opacity 1s;
+    transition: opacity 0.3s;
     font-size: rem(1);
     transform: translateX(50%);
     right: 50%;
-    bottom: rem(2.4);
+    bottom: rem(4);
+    padding: rem(0.5);
 
     &::after {
       content: '';
       position: absolute;
-      bottom: rem(-1.16);
+      bottom: rem(-0.9);
       right: 50%;
       transform: translateX(50%);
       margin-left: rem(-0.5);
       border-width: 5px;
       border-style: solid;
-      border-color: var(--ifm-color-emphasis-600) transparent transparent transparent;
+      border-color: var(--ifm-color-emphasis-700) transparent transparent transparent;
     }
   }
 
